#reply title bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -144,8 +144,8 @@
             </div>
         </form>
     </div>
-    <div class="howtouse">
-        <h1>How to use</h1>
+    <fieldset class="howtouse">
+        <legend class="h1">How to use</legend>
         <ul>
             <li>To start a conversation user/users must have entered the same Key.</li>
             <li>Create your own unique key so that other cannot join your chat by just guessing the key.</li>
@@ -155,7 +155,7 @@
             <li>Tap on the message to reply to a specific message.</li>
             <li>On Pc, use can use Ctrl+Enter to send message.</li>
         </ul>
-    </div>
+    </fieldset>
     <div class="footer">
         <p>&copy; Copyright Fuad Hasan 2022. All rights reserved.</p>
     </div>
