--- a/public/chat.html
+++ b/public/chat.html
@@ -180,7 +180,7 @@
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
   <script defer src="/js/libs/deparam.min.js"></script>
-  <script defer src="/js/chat.js"></script>
+  <script defer src="/js/chat.min.js"></script>
 </body>
 
 </html>
