--- a/public/chat.html
+++ b/public/chat.html
@@ -42,8 +42,10 @@
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1334-750.jpg" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   <link rel="apple-touch-startup-image" href="icons/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-  <link rel="preload" as="image" href="./images/tick.png">
-  <link rel="preload" as="image" href="./images/seen.png">
+  <link rel="preload" as="image" href="./images/sending-s.png">
+  <link rel="preload" as="image" href="./images/sent-s.png">
+  <link rel="preload" as="font" type="font/otf" href="./fonts/Now-Regular.otf">
+  <link rel="preload" as="font" type="font/ttf" href="./fonts/Comforter-Regular.ttf">
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
@@ -57,7 +59,7 @@
   <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible; position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: column; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
     <img src="./images/loader.gif" height="100px" width="100px" alt="" srcset="">
-    <h3 style="margin: 0; font-size: 1.3rem;">Connecting to server</h3>
+    <h3 style="margin: 0; font-size: 1.3rem;">Creating Pokemon World</h3>
   </div>
   <div id="main-screen" style="visibility: hidden;">
     <div class="topbar">
@@ -131,7 +133,7 @@
             <div class="main-message">
               <span class='time'>{{createdAt}}</span>
               <p class="textMessage">{{{text}}}</p>
-              <img src="./images/tick.png" class="sent">
+              <img src="./images/sending-s.png" height="10px" width="10px" class="sent">
             </div>
           </div>
           
@@ -155,32 +157,13 @@
           </div>
         </li>
       </template>
-      <!--template id="typing-template">
-        <li>
-          <div class="avatar"><img id="avatar" src="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></div>
-          <div class="message__body">
-            <div class="title"><h3>{{from}}</h3></div>
-            <div class="main-message">
-                <div class="ticontainer">
-                <div class="tiblock">
-                  <div class="tidot"></div>
-                  <div class="tidot"></div>
-                  <div class="tidot"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </li>
-      </template-->
     </div>
   </div>
-
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
   <script defer src="/js/libs/deparam.min.js"></script>
-  <script defer src="/js/chat.min.js"></script>
+  <script defer src="/js/chat.js"></script>
 </body>
-
 </html>
