--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="./css/index.css">
 
+    <link rel="preload" as="font" type="font/otf" href="./fonts/Now-Regular.otf">
+    <link rel="preload" as="font" type="font/ttf" href="./fonts/Comforter-Regular.ttf">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="icon" href="./images/avatars/pikachu.png">
     
